--- a/index.html
+++ b/index.html
@@ -4,13 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
+    <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Pacifico|Staatliches" rel="stylesheet">
+
+    <link rel="stylesheet" href="assests/css/reset.css">
+    <link rel="stylesheet" href="assests/css/style.css">
+    <title>Hangman</title>
+</head>
+<body>
+    <div class="wrapper">
+        <h1>Hangman</h1>
+         <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
+     </div>
+     <div class="wrapper">
+         <div id="buttons">
+         </div>  
+         <p id="catagoryName"></p>
+         <div id="hold">
+         </div>
+         <p id="mylives"></p>
+         <p id="clue">Clue -</p>  
+          <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
+         <div class="container">
+           <button id="hint">Hint</button>
+           <button id="reset">Play again</button>
+         </div>
+     </div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> 
+<script src="assests/javascript/game.js"></script>
+
+ 
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Work #2 -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game</title>
    
-    <!-- reset   -->
-    <!-- The goal of a reset stylesheet is to reduce browser inconsistencies in things like default line heights, margins and font sizes of headings, and so on. -->
-    <link rel="stylesheet" href="assests/css/reset.css">
 
-     <!-- css -->
+    <link rel="stylesheet" href="assests/css/reset.css">
     <link rel="stylesheet" href="assests/css/style.css">
 </head>
 <body>
@@ -27,6 +84,6 @@
 
     </div>
     
-    <script src="/assests/javascript/game.js"></script>
+    <script src="assests/javascript/game.js"></script>
 
-</html>
+</html> -->
