--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
-    <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Pacifico|Staatliches" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Vibur" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">  
+
 
     <link rel="stylesheet" href="assests/css/reset.css">
     <link rel="stylesheet" href="assests/css/style.css">
     <title>Hangman</title>
 </head>
 <body>
+    
 <div class="container">
     <div class="wrapper">
-        <h1>Hangman</h1>
+        <h1> Hangman <i class="fas fa-skull-crossbones animated fadeInLeft"></i></h1>
+        <br>
          <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
      </div>
      <div class="wrapper">
